Bring README and AGENTS.md up to date
README still packaged version 0.1.5 by hand and listed none of the Windows
integration, update or caching features added since. It now points at the
shared packaging script. AGENTS.md gains the mediakeys escape hatch, the
packaging rule and the current class and test counts.